Saving Tiff Files type Blender crashes #52920

Closed
opened 2017-09-27 10:00:34 +02:00 by Denzyl · 7 comments

System Information
windows 10 pro
Intel i7-6700K CPU
GTX 970
32gb of ram

Blender Version
Broken: (2.79)

Short description of error
When saving out Depth, Alpha, or Normal Passes blender Crashes when saved as 16bit TIFF RGBA

see file attached.crash test.blend

**System Information** windows 10 pro Intel i7-6700K CPU GTX 970 32gb of ram **Blender Version** Broken: (2.79) **Short description of error** When saving out Depth, Alpha, or Normal Passes blender Crashes when saved as 16bit TIFF RGBA see file attached.[crash test.blend](https://archive.blender.org/developer/F888159/crash_test.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @DenzylBasterfield

Added subscriber: @DenzylBasterfield

Added subscriber: @SteffenD

Added subscriber: @SteffenD
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Sergey Sharybin was assigned by Ray molenkamp 2017-09-28 17:13:23 +02:00
Member

You have to turn off 'save as render' checkbox to trigger the issue, but when you do :

linear has a bogus pointer at

>	blender.exe!linearrgb_to_srgb_v3_v3(float * srgb, const float * linear) Line 78	C

 	blender.exe!imb_savetiff(ImBuf * ibuf, const unsigned char * name, int flags) Line 834	C
 	blender.exe!IMB_saveiff(ImBuf * ibuf, const unsigned char * name, int flags) Line 72	C
 	blender.exe!BKE_imbuf_write(ImBuf * ibuf, const unsigned char * name, const ImageFormatData * imf) Line 2335	C
 	blender.exe!BKE_imbuf_write_as(ImBuf * ibuf, const unsigned char * name, ImageFormatData * imf, const bool save_copy) Line 2355	C
 	blender.exe!save_image_doit(bContext * C, SpaceImage * sima, wmOperator * op, SaveImageOptions * simopts, bool do_newpath) Line 1903	C
 	blender.exe!image_save_as_exec(bContext * C, wmOperator * op) Line 2069	C
 	blender.exe!wm_handler_fileselect_do(bContext * C, ListBase * handlers, wmEventHandler * handler, int val) Line 1895	C
 	blender.exe!wm_handler_fileselect_call(bContext * C, ListBase * handlers, wmEventHandler * handler, const wmEvent * event) Line 1983	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2106	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2184	C
 	blender.exe!wm_event_do_handlers(bContext * C) Line 2457	C
 	blender.exe!WM_main(bContext * C) Line 511	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 529	C
You have to turn off 'save as render' checkbox to trigger the issue, but when you do : linear has a bogus pointer at ``` > blender.exe!linearrgb_to_srgb_v3_v3(float * srgb, const float * linear) Line 78 C blender.exe!imb_savetiff(ImBuf * ibuf, const unsigned char * name, int flags) Line 834 C blender.exe!IMB_saveiff(ImBuf * ibuf, const unsigned char * name, int flags) Line 72 C blender.exe!BKE_imbuf_write(ImBuf * ibuf, const unsigned char * name, const ImageFormatData * imf) Line 2335 C blender.exe!BKE_imbuf_write_as(ImBuf * ibuf, const unsigned char * name, ImageFormatData * imf, const bool save_copy) Line 2355 C blender.exe!save_image_doit(bContext * C, SpaceImage * sima, wmOperator * op, SaveImageOptions * simopts, bool do_newpath) Line 1903 C blender.exe!image_save_as_exec(bContext * C, wmOperator * op) Line 2069 C blender.exe!wm_handler_fileselect_do(bContext * C, ListBase * handlers, wmEventHandler * handler, int val) Line 1895 C blender.exe!wm_handler_fileselect_call(bContext * C, ListBase * handlers, wmEventHandler * handler, const wmEvent * event) Line 1983 C blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2106 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2184 C blender.exe!wm_event_do_handlers(bContext * C) Line 2457 C blender.exe!WM_main(bContext * C) Line 511 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 529 C ```

This issue was referenced by 04704297d2

This issue was referenced by 04704297d2f518616015521055425163a6442790

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52920
No description provided.