Fix T52920: Saving Tiff Files type Blender crashes

Was only happening for 3 and 1 channel sources.